finish documentation of new tool
