# openapi.yaml
@@ -13,11 +13,31 @@ servers:
     description: Kilotest production server
 
 paths:
+  /api/target:
+    post:
+      operationId: summarizeQualityOfMatchingWebPages
+      summary: Summarize the quality of matching web pages
+      description: Get summary data from the available non-hidden reports about web pages whose descriptions or URL hostnames match your specifications. Matching is case-insensitive and succeeds if the page property either is included by or includes the specified fragmant. The data include the name and URL of each tested web page, when the testing was performed, how many front-end quality (i.e. accessibility, usability, and standards conformity) issues were reported, and URLs for retrieving more detailed data from the report. Before calling recommendQualityTestingOfOneWebPage and waiting for testing to occur, call this tool to check whether a report about the page is available now. If so, you can retrieve data from it. If not, you can use the submitWebAccessibilityTestRequest tool to recommend the page for testing.
+      requestBody:
+        description: Page specifications
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Target'
+      responses:
+        '200':
+          description: Summary of the quality of matching web pages
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TargetsResponse'
+
   /api/targets:
     get:
       operationId: summarizeQualityOfAllTestedWebPages
-      summary: Summarize quality of all tested web pages
-      description: Returns summary data about every non-hidden report available from Kilotest, including the name and URL of the tested web page, when the testing was performed, how many front-end quality (i.e. accessibility, usability, and standard-conformity) issues were reported, and URLs for retrieving more detailed data from the report. This is the first endpoint to call if you want data about a particular web page. The result will tell you whether a report on that page already exists. If so, you can retrieve data from it. If not, you can use the submitWebAccessibilityTestRequest endpoint to recommend the page for testing.
+      summary: Summarize the quality of all tested web pages
+      description: Get summary data about every non-hidden report available from Kilotest, including the name and URL of the tested web page, when the testing was performed, how many front-end quality (i.e. accessibility, usability, and standard-conformity) issues were reported, and URLs for retrieving more detailed data from the report.
       responses:
         '200':
           description: Summaries of available reports
@@ -287,6 +307,16 @@ components:
         URL for getting the full technical report as JSON:
           type: string
           format: uri
+
+    Target:
+      type: object
+      properties:
+        what:
+          type: string
+          description: All or part of a description of the web page. If the page is the home page of an organization, the description is the name of the organization (e.g., “Earthjustice”). Otherwise, the description appends minimal differentiating words to the name of the organization (e.g., “Earthjustice Donate”), without the word “page”.
+        url:
+          type: string
+          description: All or part of the hostname of the URL of the web page (e.g., “earthjustice.org” if the full URL is https://earthjustice.org/news).
 
     TargetsResponse:
       allOf:
